--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
           <h1 id="result" class="result" >?</h1>  
       </div>
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-3">
           <input id="a" class="form-control input-lg" type="text" maxlength="1" oninput="this.value=this.value.replace(/[^0-9]/g,'');" />
         </div>
-        <div class="col-md-3">
+        <div class="col-3">
           <input id="b" class="form-control input-lg" type="text" maxlength="1" oninput="this.value=this.value.replace(/[^0-9]/g,'');" />
         </div>
-        <div class="col-md-3">
+        <div class="col-3">
           <input id="c" class="form-control input-lg" type="text" maxlength="1" oninput="this.value=this.value.replace(/[^0-9]/g,'');" />
         </div>
-        <div class="col-md-3">
+        <div class="col-3">
           <input id="d" class="form-control input-lg" type="text" maxlength="1" oninput="this.value=this.value.replace(/[^0-9]/g,'');" />
         </div>
       </div>
